--- a/app/views/image_subjects/_form.html.erb
+++ b/app/views/image_subjects/_form.html.erb
@@ -15,10 +15,8 @@
   </div>
 
   <div id="file-drop">
-    <!-- <div id='file-preview'></div> -->
+    <div data-placeholder=true></div>
   </div>
-
-  <%= number_field_tag :image_subject_id %>
 
   <div class="action">
     <%= form.submit "Discuss", class: "btn btn-primary" %>
