--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,13 +15,15 @@
         <ul class="user">
           <% if signed_in? %>
           <li><%= link_to 'New Discussion', dashboard_path %></li>
-          <li><%= link_to "Your Discussions", discussions_path, class: 'your-discussions' %></li>
-            <li class="dropdown">
-              <a class="user-menu collapsed" href='#'><%= current_user.email %></a>
-              <ul class="menu-content">
-                <li><%= link_to "Sign out", sign_out_path, method: 'delete', class: 'sign-out' %></li>
-              </ul>
-            </li>
+          <% if current_user.discussions.any? %>
+            <li><%= link_to "Your Discussions", discussions_path, class: 'your-discussions' %></li>
+          <% end %>
+          <li class="dropdown">
+            <a class="user-menu collapsed" href='#'><%= current_user.email %></a>
+            <ul class="menu-content">
+              <li><%= link_to "Sign out", sign_out_path, method: 'delete', class: 'sign-out' %></li>
+            </ul>
+          </li>
           <% else %>
             <li><%= link_to "Sign in", sign_in_path %></li>
           <% end %>
