--- a/app/assets/stylesheets/discussions.css.scss
+++ b/app/assets/stylesheets/discussions.css.scss
@@ -47,13 +47,13 @@ body.discussions-index {
           }
         }
 
-        &:nth-child(1) a { border-color: $bright-color-1; }
-        &:nth-child(2) a { border-color: $bright-color-2; }
-        &:nth-child(3) a { border-color: $bright-color-3; }
-        &:nth-child(4) a { border-color: $bright-color-4; }
-        &:nth-child(5) a { border-color: $bright-color-5; }
-        &:nth-child(6) a { border-color: $bright-color-6; }
-        &:nth-child(7) a { border-color: $bright-color-7; }
+        &:nth-child(1n) a { border-color: $bright-color-1; }
+        &:nth-child(2n) a { border-color: $bright-color-2; }
+        &:nth-child(3n) a { border-color: $bright-color-3; }
+        &:nth-child(4n) a { border-color: $bright-color-4; }
+        &:nth-child(5n) a { border-color: $bright-color-5; }
+        &:nth-child(6n) a { border-color: $bright-color-6; }
+        &:nth-child(7n) a { border-color: $bright-color-7; }
       }
     }
   }
